--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,87 @@ body::-webkit-scrollbar {
 .ql-editor {
     font-size: 1.05rem;
 }
+
+.post-content p {
+    margin-bottom: 0.5rem;
+}
+
+.post-content h1 {
+    font-size: 1.8rem;
+    font-weight: 600;
+    font-family: sans-serif;
+    margin: 1.5rem 0;
+}
+
+.post-content h2 {
+    font-size: 1.5rem;
+    font-weight: 400;
+    font-family: sans-serif;
+    margin: 1.5rem 0;
+}
+
+.post-content h3 {
+    font-size: 1.2rem;
+    font-family: sans-serif;
+    margin: 1.5rem 0;
+}
+
+.post-content a {
+    color: rgb(73, 149, 199);
+    text-decoration: none;
+}
+
+.post-content a:hover {
+    text-decoration: underline;
+}
+
+.dark .post-content a {
+    color: red;
+}
+
+.post-content ul {
+    list-style-type: disc;
+    margin-left: 4rem;
+}
+
+.post-content ol {
+    list-style: decimal;
+    margin-left: 4rem;
+}
+
+.post-content blockquote {
+    border-left: 4px solid #ccc;
+    padding-left: 10px;
+    color: #666;
+    margin: 0 0 20px;
+}
+
+.post-content {
+    .ql-align-center {
+        text-align: center;
+    }
+
+    .ql-align-right {
+        text-align: end;
+    }
+
+    .ql-align-justify {
+        text-align: justify;
+    }
+
+    .ql-indent-1 {
+        padding-left: 2rem;
+    }
+
+    .ql-indent-2 {
+        padding-left: 6rem;
+    }
+
+    .ql-indent-3 {
+        padding-left: 10rem;
+    }
+
+    .ql-indent-4 {
+        padding-left: 14rem;
+    }
+}
