Fix React-Quill Code-Block Not Working & Add highlight.js in React-Quill

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -99,4 +99,11 @@ body::-webkit-scrollbar {
     .ql-indent-4 {
         padding-left: 14rem;
     }
+
+    .ql-syntax {
+        background-color: black;
+        border-radius: 5px;
+        padding: 1rem;
+        overflow: auto;
+    }
 }
